# text-to-speech-AI

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: example_onnx.rs  helper.rs  lib.rs
src/app/: layout.tsx  page.tsx
src/components/: ModeToggle.tsx
